--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/node": "^12.12.27",
 		"babel-jest": "^25.1.0",
 		"jest": "^25.1.0",
+		"slimdom-sax-parser": "^1.3.0",
 		"ts-node": "^8.6.2",
 		"tslint": "^6.0.0",
 		"tslint-config-prettier": "^1.18.0",
